[package]
name = "voxel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.42.0"
image = "0.23.14"
memoffset = "0.6.4"
imgui = "0.8.0"
imgui-opengl-renderer = { git = "https://github.com/eliaperantoni/rust-imgui-opengl-renderer", rev = "e80b5f21cefea355b9f8932f895f5592bd02a4ee" }
regex = "1.5.4"
noise = "0.7.0"
num_cpus = "1.13.1"
crossbeam-queue = "0.3.5"
once_cell = "1.17.0"

[dev-dependencies]
mockall = "0.11.2"
