[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.42.0"
image = "0.25.0"
memoffset = "0.9.0"
imgui = "0.11.0"
regex = "1.5.4"
noise = "0.8.2"
num_cpus = "1.13.1"
crossbeam-queue = "0.3.5"
once_cell = "1.17.0"
indoc = "2.0.4"
tempfile = "3.8.1"
rustc-hash = "1.1.0"
dhat = "0.3.2"
fastanvil = "0.31.0"
fastnbt = "2"

[build-dependencies]
walkdir = "2.4.0"
rustc-hash = "2.0.0"

[profile.release-dhat]
inherits = "release"
debug = 1

[features]
default = ["use-esvo"]
dhat-heap = []
bundle-assets = []
use-esvo = []
use-csvo = []
